Added BayerRG12 and RGB8Packed formats (for Vimba)
* Also external saving of timestamps for fmf format
* RGB8 format is still behaving strange though. From one Manta camera,
the images appear to be in BGR format instead of RGB. Need to check on
different cameras.

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@
 => Play High speed camera images directly (Multi-page Tiff?) From IDT.
 
 => Make display options pane to allow dynamic rescaling (uint16=>to min-max), colour interpolation,
-   fixed scale, HISTOGRAM (=> Show histogram of current image).
+   fixed scale, HISTOGRAM (=> Show histogram of current image). Or plot along one row/column.
 
 
 PLUGINS
